# IONENGINE

./: .clang-format  .gitignore  .gitmodules  1243.txthh  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Doxyfile  LICENSE  LICENSE.txt  README.md  buf  buffer  build.gradle  cpputils.h  cxx_helpers.h  frame-graph-doc  frame-graph-doc.md  main.cpp  platform.h  precompiled.h  test  Текстовый документ.txt
app/: CMakeLists.txt  app.cpp
core/: CMakeLists.txt  algorithm.h  base64.cpp  base64.hpp  bit.hpp  bit_utils.hpp  color.cpp  color.hpp  concurrent_queue.h  crc32.cpp  crc32.hpp  error.hpp  event.hpp  exception.hpp  handle.hpp  job_system.cpp  job_system.hpp  logger.cpp  matrix.hpp  plane.hpp  quaternion.hpp  rect.hpp  ref_ptr.hpp  ring_buffer.hpp  serializable.hpp  serialize.hpp  singleton.hpp  string.hpp  string_utils.cpp  string_utils.hpp  subprocess.hpp  utils.hpp  vector.hpp
core/math/: color.cpp  color.h
core/old/: object_ptr.h  sparse_vector.h  thread_pool.cpp
engine/: CMakeLists.txt  asset.cpp  asset.h  asset.hpp  asset_compiler.cpp  asset_compiler.h  asset_data.h  asset_loader.cpp  asset_loader.hpp  asset_manager.cpp  asset_manager.h  camera.cpp  camera.h  camera_node.cpp  camera_node.h  dds_loader.cpp  dds_loader.h  engine.cpp  engine.hpp  engine_environment.cpp  engine_environment.hpp  engine_system.h  engine_system_pool.h  framework.cpp  framework.h  hlsv_loader.cpp  hlsv_loader.h  iengine_module.hpp  importer.hpp  job_system.cpp  job_system.hpp  kids_room.cpp  kids_room.h  linked_device.cpp  linked_device.hpp  logger.cpp  logger.hpp  main.cpp  main2.cpp  material.cpp  (+32 more)
engine/graphics/: attachment.cpp  attachment.hpp  buffer.cpp  buffer.hpp  buffer_allocator.cpp  buffer_allocator.hpp  buffer_pool.cpp  buffer_pool.hpp  camera.cpp  camera.hpp  entity.cpp  entity.hpp  graphics.cpp  graphics.hpp  graphics2.cpp  graphics2.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  image.cpp  image.hpp  light.cpp  light.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  render_pass.cpp  render_pass.hpp  render_queue.cpp  render_queue.hpp  shader.cpp  shader.hpp  subpass.cpp  subpass.hpp  surface.cpp  surface.hpp  texture.cpp  texture.hpp  texture_allocator.cpp  texture_allocator.hpp  (+6 more)
engine/gui/: gui.cpp  gui.hpp  gui_context.cpp  gui_context.hpp  gui_widget.cpp  gui_widget.hpp  rml.cpp  rml.hpp
engine/importers/: glb.cpp  glb.hpp
engine/old/: framework.h
engine/renderer/: buffer_pool.cpp  buffer_pool.hpp  camera.cpp  camera.hpp  linked_device.cpp  linked_device.hpp  material.cpp  material.hpp  model.cpp  model.hpp  queue.hpp  renderable.hpp  renderer.cpp  renderer.hpp  renderer2.cpp  renderer2.hpp  shader.cpp  shader.hpp  surface.cpp  surface.hpp  texture.cpp  texture.hpp
engine/scene/: component.hpp  entity.cpp  entity.hpp  scene.hpp
engine/shaders/: base3d.fx  base3d_test_color.fx  basic.fx  basic.hlsl  blit_t1.fx  engine.fx  experimental.hlsl  metadata.json  pbr.fx  pp_blit_t1.fx  pp_quad.fx  quad copy.hlsl  quad.fx  quad.hlsl  quad_test.fx  quad_test_color.fx  s_pbr_opaque.fx  s_pbr_static_opaque.fx  std.fx  ui_base.fx  ui_color.fx  ui_texture.fx
engine/window/: window.cpp  window.hpp
lgfx/: CMakeLists.txt  cxx_helpers.h  lgfx.h  precompiled.h  types.h
lgfx/base/: binding_set_layout.h  command_list.h  frame_buffer.h  resource.h  types.h  view.h
lgfx/d3d12/: CMakeLists.txt  buffer.cpp  buffer.h  buffer_view.cpp  buffer_view.h  command_buffer.cpp  command_buffer.h  conversion.cpp  conversion.h  d3d12.h  descriptor_layout.cpp  descriptor_layout.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  device.cpp  device.h  fence.cpp  fence.h  frame_buffer.cpp  frame_buffer.h  handle_ptr.h  memory_pool.cpp  memory_pool.h  pipeline.cpp  pipeline.h  render_pass.cpp  render_pass.h  sampler.h  shader.cpp  shader.h  texture.cpp  texture.h  texture_view.cpp  texture_view.h
lgfx/d3d1222/: binding_set_layout.h
lgfx/vk/: conversion.h
mdl/: CMakeLists.txt  importer.cpp  importer.hpp  mdl.cpp  mdl.hpp  mdl_test.cpp
modules/lib/: CMakeLists.txt  algorithm.cpp  algorithm.h  channel.h  event_dispatcher.h  exception.h  expected.h  hash_buffer.h  logger.cpp  logger.h  scope_profiler.cpp  sparse_vector.h  thread_pool.cpp  thread_pool.h
modules/platform/: CMakeLists.txt  window.h  window_loop.cpp  window_loop.h  window_win32.cpp
modules/renderer/: CMakeLists.txt  command_list.cpp  frame_graph.cpp  frame_graph.h  geometry_buffer.h  geometry_cache.h  gpu_texture.cpp  mesh_renderer.h  pipeline_cache.h  render_pass.cpp  render_pass.h  render_queue.h  shader_cache.cpp  texture_cache.h  (+2 more)
platform/: CMakeLists.txt  README.md  api.h  common.hpp  msgbox.h  platform.cpp  platform.h  platform.hpp  platform_test.cpp  socket.h  types.h  window.cpp  window.h  window.hpp  window_event_handler.h  window_event_loop.h  window_loop.cpp  window_loop.h  window_loop.hpp  window_loop_win32.cpp  window_win32.cpp
renderer/: CMakeLists.txt  api.h  backend.cpp  backend.h  backend.hpp  backend_d3d12 copy.cpp  backend_d3d12.cpp  backend_vulkan.cpp  base_renderer.h  buffer.cpp  buffer.hpp  buffer_pool.cpp  buffer_pool.h  buffer_pool.hpp  cache.h  cache_manager.cpp  cache_manager.h  cache_ptr.h  camera.cpp  camera.hpp  cbuffer_pool.h  color.cpp  color.h  command_list.cpp  command_list.h  command_pool.h  context.cpp  context.h  context.hpp  data.h  descriptor_binder.cpp  descriptor_binder.h  drawable.cpp  drawable.hpp  frame_graph.cpp  frame_graph.h  framegraph.cpp  framegraph.h  geometry.cpp  geometry.h  (+99 more)
rhi/: CMakeLists.txt  rhi.cpp  rhi.hpp  rhi_test.cpp  shader_file.cpp  shader_file.hpp
shadersys/: CMakeLists.txt  common.hpp  compiler.cpp  compiler.hpp  fx.cpp  fx.hpp  hlslgen.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  shadersys_test.cpp
tests/: CMakeLists.txt  base64_test.cpp  core_test.cpp  engine_test.cpp  main.cpp  mdl_test.cpp  platform_test.cpp  rhi_test.cpp  serializable_test.cpp  serialize_test.cpp  shaderc_test.cpp  shadersys_test.cpp  test.py  txe_test.cpp
txe/: CMakeLists.txt  importer.cpp  importer.hpp  txe.cpp  txe.hpp  txe_test.cpp
(+1352 files in other folders)
